--- a/0. Démos/CoursAston/C02_ASPNet/Views/_ViewImports.cshtml
+++ b/0. Démos/CoursAston/C02_ASPNet/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using C02_ASPNet
 @using C02_ASPNet.Models
+@using C02_ASPNet.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
