--- a/0. Démos/CoursAston/C02_ASPNet/Views/Dogs/Index.cshtml
+++ b/0. Démos/CoursAston/C02_ASPNet/Views/Dogs/Index.cshtml
@@ -32,3 +32,5 @@
 
     <a asp-action="Add" class="btn btn-success">Ajouter un chien</a>
 </div>
+
+@Html.Partial("_CreateNewItem", new CreateNewItemVM() {ControllerName = "Dogs", ActionName="Add", IsMale=true, ItemName="Chien"});
