--- a/0. Démos/CoursAston/C07_Xamarin/C07_Xamarin/Pages/MainPage.xaml
+++ b/0. Démos/CoursAston/C07_Xamarin/C07_Xamarin/Pages/MainPage.xaml
@@ -3,6 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="C07_Xamarin.Pages.MainPage">
     <ContentPage.Content>
+
+        <!--<Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="50"/>
+            </Grid.ColumnDefinitions>
+        </Grid>-->
         <StackLayout Margin="10" VerticalOptions="Center">
             <Entry x:Name="loginEntry"
                    Text="user@example.com"
@@ -13,7 +28,7 @@
                    Placeholder="Password"
                    IsPassword="True"/>
             <Button x:Name="loginButton"
-                    Text="Login"
+                    Text="Test"
                     HorizontalOptions="Center"
                     Padding="5"
                     TextColor="White"
