--- a/0. Démos/CoursAston/C07_Xamarin/C07_Xamarin/Pages/AddressesListPage.xaml
+++ b/0. Démos/CoursAston/C07_Xamarin/C07_Xamarin/Pages/AddressesListPage.xaml
@@ -1,27 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="C07_Xamarin.Pages.DogListPage">
-
+             x:Class="C07_Xamarin.Pages.AddressesListPage">
     <ContentPage.ToolbarItems>
-        <ToolbarItem x:Name="addDogTBI" 
+        <ToolbarItem x:Name="addAddressTBI" 
                      Text="+ Add" 
-                     Clicked="addDogTBI_Clicked"/>
+                     Clicked="addAddressTBI_Clicked"/>
     </ContentPage.ToolbarItems>
-    
+
     <ContentPage.Content>
         <StackLayout>
-            <ListView x:Name="dogsListView"
+            <ListView x:Name="addressesListView"
                       Style="{StaticResource BasicListView}"
-                      HasUnevenRows="True"
-                      ItemSelected="dogsListView_ItemSelected">
+                      RowHeight="40"
+                      ItemSelected="addressesListView_ItemSelected">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout>
-                                <Label Text="{Binding Name}" FontAttributes="Bold" FontSize="20" TextColor="{StaticResource mainColor01}"/>
-                                <Label Text="{Binding Description}" FontAttributes="Italic" FontSize="16"/>
-                            </StackLayout>
+                            <Label Text="{Binding}" TextColor="{StaticResource mainColor01}" FontSize="18" FontAttributes="Bold,Italic" VerticalTextAlignment="Center"/>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
