--- a/0. Démos/CoursAston/C07_Xamarin/C07_Xamarin/Pages/EditDogPage.xaml
+++ b/0. Démos/CoursAston/C07_Xamarin/C07_Xamarin/Pages/EditDogPage.xaml
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="C07_Xamarin.Pages.AddDogPage">
-
+             x:Class="C07_Xamarin.Pages.EditDogPage">
     <ContentPage.Content>
         <StackLayout Margin="10">
-            <Label Text="Ajouter un chien"
+            <Label Text="Modifier un chien"
                    Style="{StaticResource H1Label}"/>
             <Entry x:Name="dogNameEntry"
                    Placeholder="Nom du chien"/>
@@ -13,11 +12,15 @@
                    Placeholder="Description du chien"/>
             <Picker x:Name="collarColorPicker"/>
             <Picker x:Name="masterPicker"/>
-            <Button x:Name="addDogButton"
-                    Margin="0,10"
-                    HorizontalOptions="Center"
-                    Text="Save"
-                    Clicked="addDogButton_Clicked"/>
+            <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="0,10">
+                <Button x:Name="editDogButton"
+                    Text="Edit"
+                    Clicked="editDogButton_Clicked"/>
+                <Button x:Name="delDogButton"
+                    Text="Delete"
+                    Clicked="delDogButton_Clicked"/>
+            </StackLayout>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
