--- a/0. Démos/CoursAston/C07_Xamarin/C07_Xamarin/Pages/MainPage.xaml
+++ b/0. Démos/CoursAston/C07_Xamarin/C07_Xamarin/Pages/MainPage.xaml
@@ -1,24 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="C07_Xamarin.Pages.MainPage">
-    <ContentPage.Content>
+             x:Class="C07_Xamarin.Pages.MainPage"
+             Title="Dogs App">
 
-        <!--<Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="3*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="50"/>
-            </Grid.ColumnDefinitions>
-        </Grid>-->
+    <NavigationPage.TitleView>
+        <StackLayout Orientation="Horizontal"
+                     VerticalOptions="CenterAndExpand"
+                     HorizontalOptions="CenterAndExpand"
+                     Margin="{OnPlatform Android='0,0,20,0', iOS='0,0,25,0', Default='0'}">
+            <Image Source="Doge.png" HeightRequest="25" WidthRequest="25"/>
+            <Label Text="Doge App" VerticalOptions="Center" FontAttributes="Bold"/>
+        </StackLayout>
+    </NavigationPage.TitleView>
+    
+    <ContentPage.Content>
         <StackLayout Margin="10" VerticalOptions="Center">
+            <Image x:Name="dogIcon" 
+                   Style="{StaticResource ThumbnailImage}"
+                   Source="Doge.png"/>
             <Entry x:Name="loginEntry"
                    Text="user@example.com"
                    Placeholder="Email"
@@ -28,11 +28,9 @@
                    Placeholder="Password"
                    IsPassword="True"/>
             <Button x:Name="loginButton"
-                    Text="Test"
+                    Text="Login"
+                    Margin="0,10"
                     HorizontalOptions="Center"
-                    Padding="5"
-                    TextColor="White"
-                    BackgroundColor="DodgerBlue"
                     Clicked="loginButton_Clicked"/>
         </StackLayout>
     </ContentPage.Content>
