Update Notions MVVM

--- a/0. Démos/CoursAston/C05_EFCore/Views/Dog/Edit.cshtml
+++ b/0. Démos/CoursAston/C05_EFCore/Views/Dog/Edit.cshtml
@@ -7,7 +7,7 @@
          <h3>Modifier un chien</h3>
         <hr />
         <form asp-action="Edit">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <input hidden asp-for="Id" />
 
