--- a/0. Démos/CoursAston/C05_EFCore/Views/Dog/Create.cshtml
+++ b/0. Démos/CoursAston/C05_EFCore/Views/Dog/Create.cshtml
@@ -7,7 +7,7 @@
          <h3>Ajouter un chien</h3>
         <hr />
         <form asp-action="Create">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="mb-2 row">
                 <label asp-for="Name"></label>
